src/objects/sdfs__FormulaShare_Rule_DML__e.object
<CustomObject>
    <fields>
        <fullName>sdfs__Error__c</fullName>
        <label>Error</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormulaShare Rule DML</label>
    <pluralLabel>FormulaShare Rule DML</pluralLabel>
</CustomObject>